5835 fix printf tokens for net-snmp 5.7.2