usr/src/lib/fm/libfmd_snmp/common/resource.c
@@ -202,7 +202,7 @@ rsrcinfo_update_one(const fmd_adm_rsrcinfo_t *rsrcinfo, void *arg)
 
 	data->d_valid = valid_stamp;
 
-	DEBUGMSGTL((MODNAME_STR, "timestamp updated for %lu/%s@%p: %lu\n",
+	DEBUGMSGTL((MODNAME_STR, "timestamp updated for %lu/%s@%p: %d\n",
 	    data->d_index, data->d_ari_fmri, data, data->d_valid));
 
 	if ((update_ctx->uc_type & UCT_ALL) ||
